--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ __pycache__/
 .installed.cfg
 bin
 develop-eggs
-dist
-downloads
 eggs
 parts
 src/*.egg-info
@@ -15,6 +13,7 @@ lib
 lib64
 *.pyo
 *.pyc
+*.code-workspace
 .env
 
 # Byte-compiled / optimized / DLL files
@@ -78,7 +77,7 @@ cover/
 *.log
 local_settings.py
 db.sqlite3-journal
-db.sqlite3
+
 # Flask stuff:
 instance/
 .webassets-cache
@@ -154,3 +153,5 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+
